--- a/blog/아톰-적응기-1일차-문제점-많은-편집기.md
+++ b/blog/아톰-적응기-1일차-문제점-많은-편집기.md
@@ -12,10 +12,10 @@
 것도 편집기 안에서 해야 된다는 생각이 들어서다. 설치 즉시 `Ctrl+Alt+O`를 누르면
 이제 편집기 안에서 브라우저가 열린다. 이맥스에서는
 [w3m-emacs](https://www.emacswiki.org/emacs/emacs-w3m) 혹은
-[eww](https://www.google.com/search?as_q=eww%20emacs&gfe_rd=ssl&ei=DMW8VomlA-SD8QfJ-aiABQ)이용해서
-브라우징을 하기도 했지만 자바스크립트가 많이 들어간 복잡한 웹사이트는 이용할 수
-없는 시대에 뒤떨어진 점이 분명 있었다. 이제 그럴 걱정 없을 거라고 생각했지만 뭔가
-현실은 다르다.
+[eww](https://www.google.com/search?as_q=eww%20emacs&gfe_rd=ssl&ei=DMW8VomlA-SD8QfJ-aiABQ)
+이용해서 브라우징을 하기도 했지만 자바스크립트가 많이 들어간 복잡한 웹사이트는
+이용할 수 없는 시대에 뒤떨어진 점이 분명 있었다. 이제 그럴 걱정 없을 거라고
+생각했지만 뭔가 현실은 다르다.
 
 브라우저가 편집기에 붙어 있기는 하지만 이것이 편집기의 인터페이스와 결합이 되어
 있지 않다. 당연한 얘기겠지만 워드프레스를 편집기 내에서 연 다음에 글을 작성하다가
